--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         .color{
             background-color: #5CA1F1;
         }
+        .is-rounded{
+            border-radius: 50%;
+        }
+        .is-gray{
+            background-color: gray;
+        }
         
 
         @media only screen and (max-width: 820px) {
@@ -287,7 +293,7 @@
                  <p class="level-item"> 
                       <a class="">   
                           <span class="icon has-text-light">
-                               <i class="fa  fa-linkedin circle"></i>
+                               <i class="fa  fa-linkedin-circle"></i>
                           </span>
                      </a>
                  </p>
